lab1/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList
   10           | VarDec error ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC

   14 OptTag: ID
   15       | /* empty */

   16 DefList: Def DefList
   17        | /* empty */

   18 FunDec: ID LP VarList RP
   19       | ID LP error RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec
   22        | /* empty */

   23 ParamDec: Specifier VarDec

   24 Def: Specifier DecList SEMI
   25    | Specifier error SEMI

   26 DecList: Dec COMMA DecList
   27        | Dec

   28 Dec: VarDec
   29    | VarDec ASSIGNOP Exp

   30 VarDec: ID
   31       | VarDec LB INT RB
   32       | VarDec LB error RB

   33 CompSt: LC DefList StmtList RC

   34 StmtList: Stmt StmtList
   35         | /* empty */

   36 Stmt: Exp SEMI
   37     | CompSt
   38     | RETURN Exp SEMI
   39     | IF LP Exp RP Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | WHILE LP Exp RP Stmt
   42     | error SEMI

   43 Exp: Exp ASSIGNOP Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp RELOP Exp
   47    | Exp PLUS Exp
   48    | Exp MINUS Exp
   49    | Exp STAR Exp
   50    | Exp DIV Exp
   51    | LP Exp RP
   52    | MINUS Exp
   53    | NOT Exp
   54    | ID LP Args RP
   55    | ID LP RP
   56    | Exp LB Exp RB
   57    | Exp DOT ID
   58    | ID
   59    | INT
   60    | FLOAT

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 10 19 25 32 42
INT (258) 31 59
FLOAT (259) 60
ID (260) 14 18 19 30 54 55 57 58
RELOP (261) 46
TYPE (262) 11
ASSIGNOP (263) 29 43
PLUS (264) 47
MINUS (265) 48 52
STAR (266) 49
DIV (267) 50
IF (268) 39 40
ELSE (269) 40
WHILE (270) 41
RETURN (271) 38
STRUCT (272) 13
AND (273) 44
OR (274) 45
NOT (275) 53
SEMI (276) 4 5 7 24 25 36 38 42
COMMA (277) 9 20 26 61
LP (278) 18 19 39 40 41 51 54 55
RP (279) 18 19 39 40 41 51 54 55
LC (280) 13 33
LB (281) 31 32 56
RB (282) 31 32 56
RC (283) 13 33
DOT (284) 57
LOWER_THAN_NOT (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7, on right: 2
ExtDecList (36)
    on left: 8 9 10, on right: 4 9 10
Specifier (37)
    on left: 11 12, on right: 4 5 6 23 24 25
StructSpecifier (38)
    on left: 13, on right: 12
OptTag (39)
    on left: 14 15, on right: 13
DefList (40)
    on left: 16 17, on right: 13 16 33
FunDec (41)
    on left: 18 19, on right: 6
VarList (42)
    on left: 20 21 22, on right: 18 20
ParamDec (43)
    on left: 23, on right: 20 21
Def (44)
    on left: 24 25, on right: 16
DecList (45)
    on left: 26 27, on right: 24 26
Dec (46)
    on left: 28 29, on right: 26 27
VarDec (47)
    on left: 30 31 32, on right: 8 9 10 23 28 29 31 32
CompSt (48)
    on left: 33, on right: 6 37
StmtList (49)
    on left: 34 35, on right: 33 34
Stmt (50)
    on left: 36 37 38 39 40 41 42, on right: 34 39 40 41
Exp (51)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
   , on right: 29 36 38 39 40 41 43 44 45 46 47 48 49 50 51 52 53 56
    57 61 62
Args (52)
    on left: 61 62, on right: 54 61


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


state 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 14
    SEMI  shift, and go to state 15

    ExtDecList  go to state 16
    FunDec      go to state 17
    VarDec      go to state 18


state 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


state 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


state 10

   14 OptTag: ID .

    $default  reduce using rule 14 (OptTag)


state 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


state 12

    0 $accept: Program $end .

    $default  accept


state 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 14

   18 FunDec: ID . LP VarList RP
   19       | ID . LP error RP
   30 VarDec: ID .

    LP  shift, and go to state 20

    $default  reduce using rule 30 (VarDec)


state 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


state 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 22

    CompSt  go to state 23


state 18

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   10           | VarDec . error ExtDecList
   31 VarDec: VarDec . LB INT RB
   32       | VarDec . LB error RB

    error  shift, and go to state 24
    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    SEMI  reduce using rule 8 (ExtDecList)


state 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 17 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 28
    Def              go to state 29


state 20

   18 FunDec: ID LP . VarList RP
   19       | ID LP . error RP

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RP  reduce using rule 22 (VarList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    VarList          go to state 32
    ParamDec         go to state 33


state 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 22

   33 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 17 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 29


state 23

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 24

   10 ExtDecList: VarDec error . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 18


state 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 37
    VarDec      go to state 18


state 26

   31 VarDec: VarDec LB . INT RB
   32       | VarDec LB . error RB

    error  shift, and go to state 38
    INT    shift, and go to state 39


state 27

   24 Def: Specifier . DecList SEMI
   25    | Specifier . error SEMI

    error  shift, and go to state 40
    ID     shift, and go to state 35

    DecList  go to state 41
    Dec      go to state 42
    VarDec   go to state 43


state 28

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 44


state 29

   16 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 17 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 29


state 30

   19 FunDec: ID LP error . RP

    RP  shift, and go to state 46


state 31

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 47


state 32

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 48


state 33

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 21 (VarList)


state 34

   33 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    RETURN  shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 22

    RC  reduce using rule 35 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 61
    Stmt      go to state 62
    Exp       go to state 63


state 35

   30 VarDec: ID .

    $default  reduce using rule 30 (VarDec)


state 36

   10 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


state 37

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 38

   32 VarDec: VarDec LB error . RB

    RB  shift, and go to state 64


state 39

   31 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 65


state 40

   25 Def: Specifier error . SEMI

    SEMI  shift, and go to state 66


state 41

   24 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 67


state 42

   26 DecList: Dec . COMMA DecList
   27        | Dec .

    COMMA  shift, and go to state 68

    $default  reduce using rule 27 (DecList)


state 43

   28 Dec: VarDec .
   29    | VarDec . ASSIGNOP Exp
   31 VarDec: VarDec . LB INT RB
   32       | VarDec . LB error RB

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 26

    $default  reduce using rule 28 (Dec)


state 44

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


state 45

   16 DefList: Def DefList .

    $default  reduce using rule 16 (DefList)


state 46

   19 FunDec: ID LP error RP .

    $default  reduce using rule 19 (FunDec)


state 47

   23 ParamDec: Specifier VarDec .
   31 VarDec: VarDec . LB INT RB
   32       | VarDec . LB error RB

    LB  shift, and go to state 26

    $default  reduce using rule 23 (ParamDec)


state 48

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


state 49

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 22 (VarList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    VarList          go to state 70
    ParamDec         go to state 33


state 50

   42 Stmt: error . SEMI

    SEMI  shift, and go to state 71


state 51

   59 Exp: INT .

    $default  reduce using rule 59 (Exp)


state 52

   60 Exp: FLOAT .

    $default  reduce using rule 60 (Exp)


state 53

   54 Exp: ID . LP Args RP
   55    | ID . LP RP
   58    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 58 (Exp)


state 54

   52 Exp: MINUS . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 73


state 55

   39 Stmt: IF . LP Exp RP Stmt
   40     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 74


state 56

   41 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 75


state 57

   38 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 76


state 58

   53 Exp: NOT . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 77


state 59

   51 Exp: LP . Exp RP

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 78


state 60

   37 Stmt: CompSt .

    $default  reduce using rule 37 (Stmt)


state 61

   33 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


state 62

   34 StmtList: Stmt . StmtList

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    RETURN  shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 22

    RC  reduce using rule 35 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 80
    Stmt      go to state 62
    Exp       go to state 63


state 63

   36 Stmt: Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    RELOP     shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    SEMI      shift, and go to state 89
    LB        shift, and go to state 90
    DOT       shift, and go to state 91


state 64

   32 VarDec: VarDec LB error RB .

    $default  reduce using rule 32 (VarDec)


state 65

   31 VarDec: VarDec LB INT RB .

    $default  reduce using rule 31 (VarDec)


state 66

   25 Def: Specifier error SEMI .

    $default  reduce using rule 25 (Def)


state 67

   24 Def: Specifier DecList SEMI .

    $default  reduce using rule 24 (Def)


state 68

   26 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    DecList  go to state 92
    Dec      go to state 42
    VarDec   go to state 43


state 69

   29 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 93


state 70

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


state 71

   42 Stmt: error SEMI .

    $default  reduce using rule 42 (Stmt)


state 72

   54 Exp: ID LP . Args RP
   55    | ID LP . RP

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 94

    Exp   go to state 95
    Args  go to state 96


state 73

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   52    | MINUS Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    LB    shift, and go to state 90
    DOT   shift, and go to state 91

    $default  reduce using rule 52 (Exp)


state 74

   39 Stmt: IF LP . Exp RP Stmt
   40     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 97


state 75

   41 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 98


state 76

   38 Stmt: RETURN Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    RELOP     shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    SEMI      shift, and go to state 99
    LB        shift, and go to state 90
    DOT       shift, and go to state 91


state 77

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   53    | NOT Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    LB   shift, and go to state 90
    DOT  shift, and go to state 91

    $default  reduce using rule 53 (Exp)


state 78

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | LP Exp . RP
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    RELOP     shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    RP        shift, and go to state 100
    LB        shift, and go to state 90
    DOT       shift, and go to state 91


state 79

   33 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 33 (CompSt)


state 80

   34 StmtList: Stmt StmtList .

    $default  reduce using rule 34 (StmtList)


state 81

   46 Exp: Exp RELOP . Exp

    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 101


state 82

   43 Exp: Exp ASSIGNOP . Exp
